# Omega-Forge

./: README.md  SPEC.md  pyproject.toml
.github/workflows/: tests.yml
docs/: ARCHITECTURE.md  GITHUB_DECOMPOSITION_PLAN.md  LICENSING.md  OMEGA_FORGE_ARCHITECTURE_V1.md  ROADMAP.md  SPEC_V0.md  VISION.md
docs/github_sources/: 00_INDEX.md  01_langgraph.md  02_aider.md  03_openhands.md  04_mem0.md  05_qdrant.md  06_lancedb.md  07_autogen.md  08_crewai.md  09_chroma.md  10_llamaindex.md  11_haystack.md  12_graphrag.md  13_react.md  14_tauri.md  15_cytoscape.md  16_xyflow.md  17_paperqa.md  18_openalex.md  19_networkx.md  20_moby.md
omega_forge/: __init__.py  cli.py
omega_forge/agents/: base.py  executor.py  planner.py  repair.py  reviewer.py  tester.py
omega_forge/core/: agent_bus.py  agent_message.py  agents.py  artifact_validator.py  context.py  execution_loop.py  failure_memory.py  forge_graph.py  forge_runtime.py  knowledge_graph.py  patch_plan.py  project_index.py  project_state.py  repair_loop.py  report.py  sandbox_manager.py  task_queue.py  template_selector.py  templates.py  workspace.py
tests/: test_agent_bus.py  test_artifact_validator.py  test_context_builder.py  test_execution_loop.py  test_executor.py  test_failure_memory.py  test_forge_graph.py  test_knowledge_graph.py  test_patch_plan.py  test_planner.py  test_project_state.py  test_repair_loop.py  test_report.py  test_reviewer.py  test_runtime.py  test_sandbox_manager.py  test_task_queue.py  test_template_selector.py  test_tester.py  test_workspace.py
