[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "omega-forge"
version = "0.1.0"
description = "Omega-Forge autonomous project forge prototype"
requires-python = ">=3.11"
readme = "README.md"

[tool.setuptools.packages.find]
include = ["omega_forge*"]

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
